# University

./: LICENSE  README.md
2.2 - Bases de Dados/: modelo_Lógico.mwb  modelo_conceptual.brM3  powerBI.pbix
2.2 - Bases de Dados/sql/: Views.sql  index.sql  povoamentoMANUAL.sql  procedure.sql  queries(4).sql
2.2 - Bases de Dados/src/: 1.datasetCurso.py  11.datasetEstatistica.py  12.datasetHobbie.py  13.datasetPlataforma.py  15.datasetsAcesso.py  3.datasetDisciplina.py  7.datasetAluno.py  8.datasetProfessor.py  9.datasetTurma_has_professor.py
2.2 - Investigação Operacional/tp2/: 100893.lp  100893.txt
2.2 - Programação Orientada aos Objetos/src/: Main.java
2.2 - Programação Orientada aos Objetos/src/Model/: Artigo.java  AvaliacaoEstado.java  DimensaoEncomenda.java  Padrao.java  PremiumTransportadora.java  Transportadora.java  Tshirt.java  Utilizador.java
2ºano/2.2 - Bases de Dados/sql/: BD (4).sql  lixo.sql  segurança.sql
2ºano/2.2 - Bases de Dados/src/: 10.datasetAvaliacao.py  14.datasetRecurso.py  2.datasetTurma.py  4.datasetCurso_has_Disciplina.py  5.datasetAula.py  6.datasetEE.py  delete.py
2ºano/2.2 - Investigação Operacional/tp1/: x100893.lp
2ºano/2.2 - Programação Orientada aos Objetos/: Fatura1cc78f1c-dc68-462f-94ab-422ea942fafd.txt
4ºano/1ºsemestre/4.1 - Requisitos e Arquiteturas de software/Fase 3/local/backend/ms-project/picturas_contrast_tool_ms/: pyproject.toml
4ºano/1ºsemestre/4.1 - Requisitos e Arquiteturas de software/Fase 3/local/backend/ms-project/picturas_contrast_tool_ms/app/: contrast_request_message.py
(+722 files in other folders)
